Wrote tasks, finished pet-principle

--- a/PET/Protokoll/PET_Protokoll_phys.tex
+++ b/PET/Protokoll/PET_Protokoll_phys.tex
@@ -1,1 +1,17 @@
 \section{Physikalische Grundlagen}
+\subsection{Grundkonzept eines PET-Scanners}
+	Die \textbf{Positronen-Emissions-Tomographie} ist ein bildgebendes Verfahren zur in vivo-Bechreibung von biochemischen und physiologischen Prozessen. Sie ist dadurch ein Beispiel für ein \textbf{funktionelles} Bildgebungsverfahren, das dazu dient, um Stoffwechselprozesse und Blutflüsse im menschlichen Körper zu überwachen, ohne dabei chirurgische Maßnahmen in Erwägung ziehen zu müssen. Dem Patientien wird dabei ein $\beta^+$-Strahler (ein sogenannter \textbf{Trancer}) mit einer Halbwertszeit in der Dimension von mehreren Minuten bis Stunden, welcher den physiologischen Vorgang im Körper begleitet und sich in bestimmten Strukturen anreichert. Die Tracer haben einen Protonenüberschuss, wodurch in Atomkernen der Tranceratome folgende Kernreaktion stattfindet: 
+	\begin{equation*}
+	^1_1p^+ \longrightarrow ^1_0n + e^+ + \nu_e
+	\end{equation*}\\
+	Die entstandenen Positronen (Ruheenergie $E_0 = 511\ \unit{keV}$) annihilieren innerhalb weniger Millimeter mit Hüllenelektronen des umliegenden Gewebes zu zwei Photonen der Energie $E_\gamma$:\\
+	\begin{equation*}
+		e^+ e^- \longrightarrow \gamma \gamma
+	\end{equation*}
+	Im Schwerpunktsystem des Lepton-Antileptonpaares stehen die Impulse kolliniar, wodurch der Gesamtimpuls (per Definition) verschwindet. Aufgrund der Viererimpulserhaltung muss auch der Impuls des entstandenen Photonenpaares verschwindet, wodurch sich ein 180° Winkel zwischen ihnen ergibt und ihre Energie unter Vernachlässigung der kinetischen Energie der einfallenden Teilchen ungefähr gleich der Ruheenergie des Elektrons/Positrons ist, d.h. $E_\gamma \approx 511\ \unit{keV}$. Das ist auch der Energiewert, bei dem wir später der Peak des Energiespektrums erwarten.
+\subsection{Koinzidenzmessungen}
+
+\subsection{Detektoraufbau}
+\subsubsection{Szintillationsdetektoren}
+
+\subsubsection{Modifiziertes Anger-Prinzip}
