--- a/PET/Protokoll/PET_Protokoll_df.tex
+++ b/PET/Protokoll/PET_Protokoll_df.tex
@@ -114,9 +114,9 @@ Bevor wir die eigentlich Messdaten aufnehmen könnten, musste die Messapperatur 
        Für den Fehler erhält man bei fehlerlos angenommenen b, D, und a folgendes:
        $$ \Delta\varepsilon_{A/B} = \varepsilon_{A/B} \cdot\sqrt{\left(\frac{\Delta P_\beta}{P_\beta}\right)^2+ \left(\frac{2\Delta A}{A}\right)^2 + \left(\frac{\Delta \tau}{\tau}\right)^2+ \left(\frac{\Delta \tilde t_{A/B}}{\tilde t_{A/B}}\right)^2}$$
        Die verwendeten Daten sind folgende:
-       $$ D = \unit[386]{mm}, b = \unit[25]{mm}, a = \unit[54]{mm}, P_\beta = 0,90382 \pm 0,00021, \tilde t_B = \unit[(230,4 \pm 0,1)]{s} , \tilde t_A = \unit[(314\pm7)]{s}$$
+       $$ D = \unit[386]{mm}, b = \unit[25]{mm}, a = \unit[54]{mm}, P_\beta = 0,90382 \pm 0,00021, \tilde t_B = \unit[(230 \pm 0,1)]{s} , \tilde t_A = \unit[(314\pm7)]{s}$$
        Damit erhalten wir für die Detektoren folgende Nachweiseffektivitäten:
-       $$ \varepsilon_A = \unit[(46,4\pm 3)]{\%}, \varepsilon_B = \unit[(54,2\pm 3)]{\%}$$
+       $$ \varepsilon_A = \unit[(46\pm 3)]{\%}, \varepsilon_B = \unit[(54\pm 3)]{\%}$$
        Diese Nachweiseffektivität ist für einen Versuchsplatz angemessen gut, im Vergleich zu in Krankenhäusern verwendeten Geräten, welche mit einer Effektivität von 80\% arbeiten.
 
     \subsubsection{Messung bei Positionen direkt an den Detektoren}
@@ -162,7 +162,7 @@ Bevor wir die eigentlich Messdaten aufnehmen könnten, musste die Messapperatur 
     Aus den Zeitdiagrammen, die auf den ersten Blick sehr ähnlich sind, kann man über einen Gauß-Fit die Peak-Positionen, das heißt, die Maxima, bestimmen.
     Diese wird verwendet, um die Laufzeitdifferenz und damit letztlich den Abstand zwischen den Detektoren A und B zu bestimmen.
     Die Zeitpeaks liegen bei $ \Delta t_A = \unit[63,35]{ns}$ und $\Delta t_B = \unit[61,80]{ns}$. Mit der Formel $l = c\cdot \Delta T$
-    ergibt sich $l = \unit[46,5]{cm}$ Dieser Wert ist größer als der, der uns in der Aufgabenstellung verraten wurde und weicht um 20\% ab. Dies liegt daran, 
+    ergibt sich $l = \unit[(46,5\pm4,3)]{cm}$ Dieser Wert ist größer als der, der uns in der Aufgabenstellung verraten wurde und weicht um 20\% ab. Dies liegt daran, 
     dass das Delay des Detektors A nicht bestimmt wurde. Rechnet man dieses heraus, kann man sicher auf den von 38,6cm gelangen.
 
         
