--- a/PET/Protokoll/PET_Protokoll_main.tex
+++ b/PET/Protokoll/PET_Protokoll_main.tex
@@ -36,7 +36,7 @@
 \input{PET_Protokoll_aufg}		% Aufgabenstellung
 \input{PET_Protokoll_phys}		% Physikalischer Hintergrund
 \input{PET_Protokoll_df}		% Durchführung
-\input{PET_Protokoll_ausw}		% Auswertung
+\input{PET_Protokoll_ausw}		% Auswertung bzw. Zusammenfassung
 \include{PET_Protokoll_literatur}
 
 \end{document}
